# distributed-autocomplete

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: ci.yml
cmake/: Sanitizers.cmake  Warnings.cmake
docs/learning/: deep-dives.md
docs/superpowers/plans/: 2026-04-22-phase-0-1-skeleton-and-single-tenant-index.md
docs/superpowers/specs/: 2026-04-22-distributed-autocomplete-design.md
libs/common/: CMakeLists.txt
libs/common/include/autocomplete/common/: Error.h  Result.h
libs/index/: CMakeLists.txt
libs/index/include/autocomplete/index/: Entry.h  EntryTable.h  FstIndex.h  IndexView.h  SimpleTrie.h
libs/index/src/: SimpleTrie.cpp
libs/memory/: CMakeLists.txt
libs/memory/include/autocomplete/memory/: StringArena.h
libs/query/: CMakeLists.txt
libs/query/include/autocomplete/query/: FixedTopK.h  QueryExecutor.h  Tokenizer.h
libs/query/src/: QueryExecutor.cpp  Tokenizer.cpp
scripts/: gen_corpus.py
tests/integration/: CMakeLists.txt  serving_node_e2e_test.cpp
tests/integration/fixtures/: small_corpus.csv
tests/unit/: CMakeLists.txt
tests/unit/common/: error_test.cpp  result_test.cpp
tests/unit/index/: entry_table_test.cpp  index_view_test.cpp  simple_trie_test.cpp
tests/unit/memory/: string_arena_test.cpp
tests/unit/query/: fixed_topk_test.cpp  query_executor_test.cpp  tokenizer_test.cpp
